--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.12",
+    "geist": "^1.3.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
@@ -53,6 +55,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^4.0.17"
   },
